<resources>
    <string name="input_hint">채팅을 입력하세요</string>
    <string name="input_block_hint">다수의 신고로 채팅 사용이 제한됩니다.</string>
    <string name="input_anonymously_hint">채팅을 하려면 로그인을 해주세요</string>
    <string name="input_ama_hint">AMA 진행 시 채팅이 불가합니다.</string>
    <string name="asset_description">Coinlive에서 자산인증을 검증한 메시지입니다.</string>
    <string name="twitter_chat_title">%1$s(%2$s) 트위터</string>
    <string name="medium_chat_title">%1$s(%2$s) 미디움</string>
    <string name="price_jump_chat_title">급등알림</string>
    <string name="price_drop_chat_title">급락알림</string>
    <string name="buy_futures_chat_title">롱 청산(BINANCE FUTURES)</string>
    <string name="sell_futures_chat_title">숏 청산(BINANCE FUTURES)</string>

    <string name="translator_setting_title">번역 설정</string>
    <string name="translator">번역</string>
    <string name="translator_result_language">결과 언어</string>

    <string name="notification_setting_title">알림 설정</string>
    <string name="notification_all">전체 알림</string>

    <string name="translator_ko">한국어</string>
    <string name="translator_en">English</string>
    <string name="translator_zh">中文 (简体)</string>

    <string name="cancel">취소</string>
    <string name="confirm">확인</string>

    <string name="translator_download">번역을 위한 리소스 다운로드가 진행됩니다.\n다운로드 하시겠습니까?\n(예상 리소스 파일크기 30MB)</string>

    <string name="read_all">전체보기</string>
    <string name="message_menu_duplicate">복사</string>
    <string name="message_menu_report">신고</string>
    <string name="message_menu_block">차단</string>
    <string name="message_menu_block_delete">차단 해제</string>
    <string name="message_menu_delete">삭제</string>

    <string name="block_description">차단 하시겠습니까?</string>
    <string name="take_over">접수</string>
    <string name="cm_close">접어두기</string>
    <string name="cm">공지</string>

    <string name="blocked_user_message">차단 사용자의 메세지입니다.</string>
    <string name="new_message">신규메시지 도착!</string>

    <string name="shared_cl_chatting">채널 공유하기</string>
    <string name="copied_url">URL을 복사했습니다.</string>
    <string name="copied_text">복사되었습니다. 붙여넣으세요.</string>
    <string name="report_success">신고가 접수되었습니다.\n소중한 의견 감사합니다.</string>
    <string name="menu_profile">프로필 설정</string>
    <string name="save">저장</string>
    <string name="nick_name_error">한글/영문/숫자 3~10자 내로 설정해주세요!</string>

    <string name="max_test" translatable="false">로렘 입숨(lorem ipsum; 줄여서 립숨lipsum)은 출판이나 그래픽 사토시나카모토로렘 입숨(lorem ipsum; 줄여서 립숨lip로렘 입숨(lorem ipsum; 줄여서 립숨lipsum)은 출판이나 그래픽 사토시나카모토 로렘 입숨(lorem ipsum; 줄여서 립숨lip로렘 입숨(lorem ipsum; 줄여서 립숨lipsum)은 출판이나 그래픽 사토시나카모토 로렘 입숨(lorem ipsum; 줄여서 립숨lip로렘 입숨(lorem ipsum; 줄여서 립숨lipsum)은 출판이나 그래픽 사토시나카모토 로렘 입숨(lorem ipsum; 줄여서 립숨lip 로렘 입숨(lorem ipsum; 줄여서 립숨lipsum)은 출판이나 그래픽 사토시나카모토로렘 입숨(lorem ipsum; 줄여서 립숨lipsum)은 출판이나 그래픽 사토시나카모토 입숨(lorem ipsum; 줄여서 립숨
로렘 입숨(lorem ipsum; 줄여서 립숨lipsum)은 출판이나 그래픽 사토시나카모토로렘 입숨(lorem ipsum; 줄여서 립숨lip로렘 입숨(lorem ipsum; 줄여서 립숨lipsum)은 출판이나 그래픽 사토시나카모토 로렘 입숨(lorem ipsum; 줄여서 립숨lip로렘 입숨(lorem ipsum; 줄여서 립숨lipsum)은 출판이나 그래픽 사토시나카모토 로렘 입숨(lorem ipsum; 줄여서 립숨lip로렘 입숨(lorem ipsum; 줄여서 립숨lipsum)은 출판이나 그래픽 사토시나카모토 로렘 입숨(lorem ipsum; 줄여서 립숨lip 로렘 입숨(lorem ipsum; 줄여서 립숨lipsum)은 출판이나 그래픽 사토시나카모토로렘 입숨(lorem ipsum; 줄여서 립숨lipsum)은 출판이나 그래픽 사토시나카모토 입숨(lorem ipsum; 줄여서 립숨</string>

</resources>