<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="32dp"
    android:background="@drawable/shape_round_dialog_background"
    android:paddingHorizontal="16dp"
    android:paddingTop="24dp"
    android:paddingBottom="20dp">

    <TextView
        android:id="@+id/tv_description"
        style="@style/subtitle2"
        android:gravity="center"
        android:text="@string/translator_download"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/dialog_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/shape_cancel_button_background"
        android:padding="0dp"
        android:text="@string/cancel"
        android:textColor="@color/dialog_cancel_text"
        app:layout_constraintEnd_toStartOf="@id/btn_confirm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_description" />

    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/shape_confirm_button_background"
        android:padding="0dp"
        android:text="@string/confirm"
        android:textColor="@color/grey_090"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_cancel"
        app:layout_constraintTop_toBottomOf="@id/tv_description" />


</androidx.constraintlayout.widget.ConstraintLayout>