<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>

    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:background="@drawable/shape_round_dialog_background"
        android:paddingHorizontal="16dp"
        android:paddingTop="24dp"
        android:paddingBottom="20dp">

        <TextView
            style="@style/subtitle1"
            android:id="@+id/tv_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/normal_text"
            android:text="@string/message_menu_report"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_list"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/select_dialog_cancel_background"
            android:padding="0dp"
            android:text="@string/cancel"
            android:textColor="@color/dialog_cancel_text"
            app:layout_constraintEnd_toStartOf="@id/btn_confirm"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rv_list" />

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/select_dialog_confirm_background"
            android:padding="0dp"
            android:text="@string/take_over"
            android:textColor="@color/grey_090"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_cancel"
            app:layout_constraintTop_toBottomOf="@id/rv_list" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
