<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@drawable/shape_translator_bottom_sheet_background"
        android:layout_width="match_parent"
        android:paddingBottom="40dp"
        android:paddingTop="38dp"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_ko"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:paddingHorizontal="24dp"
            android:layout_width="match_parent"
            android:layout_height="54dp">

            <TextView
                style="@style/translator_item"
                android:text="@string/translator_ko"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <RadioButton
                android:id="@+id/rbtn_ko"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/select_radio_button"
                android:button="@null"
                android:minWidth="0dp"
                android:minHeight="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TouchTargetSizeCheck"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_en"
            app:layout_constraintTop_toBottomOf="@id/cl_ko"
            app:layout_constraintStart_toStartOf="parent"
            android:paddingHorizontal="24dp"
            android:layout_width="match_parent"
            android:layout_height="54dp">

            <TextView
                style="@style/translator_item"
                android:text="@string/translator_en"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <RadioButton
                android:id="@+id/rbtn_en"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/select_radio_button"
                android:button="@null"
                android:minWidth="0dp"
                android:minHeight="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TouchTargetSizeCheck"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_zh"
            app:layout_constraintTop_toBottomOf="@id/cl_en"
            app:layout_constraintStart_toStartOf="parent"
            android:paddingHorizontal="24dp"
            android:layout_width="match_parent"
            android:layout_height="54dp">

            <TextView
                style="@style/translator_item"
                android:text="@string/translator_zh"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <RadioButton
                android:id="@+id/rbtn_zh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/select_radio_button"
                android:button="@null"
                android:minWidth="0dp"
                android:minHeight="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TouchTargetSizeCheck"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

