<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="isAnonymously"
            type="Boolean" />

        <import type="android.view.View" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/shape_chatting_menu_background"
            android:elevation="5dp"
            android:minWidth="166dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="16dp"
                android:paddingVertical="9dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tv_share"
                    style="@style/body2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="39dp"
                    android:text="@string/shared_cl_chatting"
                    android:textColor="@color/normal_text"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/iv_share"
                    app:layout_constraintHorizontal_chainStyle="spread_inside"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/iv_share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:src="@drawable/icon_share"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_chainStyle="spread_inside"
                    app:layout_constraintStart_toEndOf="@id/tv_share"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ContentDescription" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:id="@+id/d1"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/chatting_menu_divider"
                app:layout_constraintEnd_toEndOf="@id/cl_share"
                app:layout_constraintStart_toStartOf="@id/cl_share"
                app:layout_constraintTop_toBottomOf="@id/cl_share" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_noti"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingHorizontal="16dp"
                android:paddingVertical="9dp"
                android:visibility="@{isAnonymously ? View.GONE : View.VISIBLE, default =gone}"
                app:layout_constraintEnd_toEndOf="@id/cl_share"
                app:layout_constraintStart_toStartOf="@id/cl_share"
                app:layout_constraintTop_toBottomOf="@id/d1">

                <TextView
                    android:id="@+id/tv_noti"
                    style="@style/body2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/notification_setting_title"
                    android:textColor="@color/normal_text"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/iv_noti"
                    app:layout_constraintHorizontal_chainStyle="spread_inside"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/iv_noti"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:src="@drawable/icon_settings"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_chainStyle="spread_inside"
                    app:layout_constraintStart_toEndOf="@id/tv_noti"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ContentDescription" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:id="@+id/d2"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/chatting_menu_divider"
                android:visibility="@{isAnonymously ? View.GONE : View.VISIBLE, default =gone}"
                app:layout_constraintEnd_toEndOf="@id/cl_noti"
                app:layout_constraintStart_toStartOf="@id/cl_noti"
                app:layout_constraintTop_toBottomOf="@id/cl_noti" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_trans"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingHorizontal="16dp"
                android:paddingVertical="9dp"
                app:layout_constraintEnd_toEndOf="@id/cl_share"
                app:layout_constraintStart_toStartOf="@id/cl_share"
                app:layout_constraintTop_toBottomOf="@id/d2">

                <TextView
                    android:id="@+id/tv_trans"
                    style="@style/body2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/translator_setting_title"
                    android:textColor="@color/normal_text"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/iv_trans"
                    app:layout_constraintHorizontal_chainStyle="spread_inside"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/iv_trans"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:src="@drawable/icon_translator"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_chainStyle="spread_inside"
                    app:layout_constraintStart_toEndOf="@id/tv_trans"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ContentDescription" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:id="@+id/d3"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/chatting_menu_divider"
                android:visibility="@{isAnonymously ? View.GONE : View.VISIBLE, default =gone}"
                app:layout_constraintEnd_toEndOf="@id/cl_trans"
                app:layout_constraintStart_toStartOf="@id/cl_trans"
                app:layout_constraintTop_toBottomOf="@id/cl_trans" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_profile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingHorizontal="16dp"
                android:paddingVertical="9dp"
                android:visibility="@{isAnonymously ? View.GONE : View.VISIBLE, default =gone}"
                app:layout_constraintEnd_toEndOf="@id/cl_share"
                app:layout_constraintStart_toStartOf="@id/cl_share"
                app:layout_constraintTop_toBottomOf="@id/d3">

                <TextView
                    android:id="@+id/tv_profile"
                    style="@style/body2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_profile"
                    android:textColor="@color/normal_text"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/iv_profile"
                    app:layout_constraintHorizontal_chainStyle="spread_inside"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/iv_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:src="@drawable/icon_menu_profile"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_chainStyle="spread_inside"
                    app:layout_constraintStart_toEndOf="@id/tv_profile"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ContentDescription" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>